# aws-fastapi-foundation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: main.py
docs/: architecture.md  cdk-basics.md  cdk-constructs.md  ecs-fargate-cdk-plan.md  implementation-plan.md  linkedin-post-draft.md
infrastructure/: README.md  app.py  cdk.context.json
infrastructure/infrastructure/: infrastructure_stack.py
infrastructure/tests/unit/: test_infrastructure_stack.py
tests/: test_main.py
